--- a/Absa-SPA/src/app/contacts/contact-card/contact-card.component.html
+++ b/Absa-SPA/src/app/contacts/contact-card/contact-card.component.html
@@ -1,3 +1,5 @@
-<p>
-  {{contact.firstName}}
-</p>
+<div class="contact-card {{contact.gender}}">
+  <img src="{{contact.photoUrl}}" height="55" width="55">
+  <div class="name">{{contact.firstName}} {{contact.lastName}}</div>
+  <div class="details text-muted">{{contact.email}}</div>
+</div>
