--- a/Absa-SPA/src/app/contacts/contact-list/contact-list.component.html
+++ b/Absa-SPA/src/app/contacts/contact-list/contact-list.component.html
@@ -5,6 +5,6 @@
     </div>
   </div>
   <div class="offset-md-1 col-md-6">
-    <app-contact-profile></app-contact-profile>
+    <app-contact-profile [contact]="newContact"></app-contact-profile>
   </div>
 </div>
