--- a/Absa-SPA/src/app/contacts/contact-list/contact-list.component.html
+++ b/Absa-SPA/src/app/contacts/contact-list/contact-list.component.html
@@ -1,10 +1,14 @@
 <div class="row">
-  <div class="col-md-4 frame">
+  <div class="col-md-3 frame">
+    <div class="control-group">
+      <input type="text" class="form-control offset-md-1 col-md-9" name="search" (change)="searchChange()" [(ngModel)]="searchQuery" placeholder="Search Contacts: (empty for all)" >
+    </div>
+    
     <div *ngFor="let contact of contacts">
-      <app-contact-card [contact]="contact"></app-contact-card>
+      <app-contact-card [contact]="contact" (click)="getContact(contact.id)"></app-contact-card>
     </div>
   </div>
   <div class="offset-md-1 col-md-6">
-    <app-contact-profile [contact]="newContact"></app-contact-profile>
+    <app-contact-profile [contact]="selectedContact"></app-contact-profile>
   </div>
 </div>
