--- a/Absa-SPA/src/app/contacts/contact-profile/contact-profile.component.html
+++ b/Absa-SPA/src/app/contacts/contact-profile/contact-profile.component.html
@@ -9,6 +9,10 @@
     </div>
     <div class="col-md-8">
       <div class="form-group">
+        <input type="radio" value="Male" name="gender" [(ngModel)]="contact.gender" > Male
+        <input type="radio" value="Female" name="gender" [(ngModel)]="contact.gender" > Female
+      </div>
+      <div class="form-group">
         <div class="input-group">
             <span class="input-group-prepend">
             <span class="input-group-text">
